@@ -1284,14 +1284,19 @@ sub qualityorder {
 		    "dpi_high2",
 		    "dpi_high3",
 		    "dpi_high4",
+		    "dpi_high5",
 		    "dpi_highmono",
 		    "dpi_highmono2",
 		    "dpi_mono",
 		    "dpi_draft",
 		    "dpi_draft2",
 		    "dpi_draft3",
+		    "dpi_draft4",
+		    "dpi_draft5",
                     "dpi_std2",
                     "dpi_std3",
+                    "dpi_std4",
+                    "dpi_std5",
 		    "dpi_draftmono",
 		    "dpi_draftmono2",
 		    "dpi_glossphotohigh",
@@ -1309,6 +1314,7 @@ sub qualityorder {
 		    "dpi_photodraft",
 		    "dpi_photodraft2",
 		    "dpi_photodraft3",
+		    "dpi_photodraft4",
 		    "dpi_photomonohigh",
 		    "dpi_photomonomed",
 		    "dpi_photomono",
